# flask-min

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
