[tool.poetry]
name = "flask-min"
version = "0.1.0"
description = "A minimal Flask app with Pydantic for validation."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
pydantic = "^2.3.0"

[tool.poetry.scripts]
flask-pydantic-app = "app:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
